Fix toolbar overlapping content

--- a/src/components/Hymn.scss
+++ b/src/components/Hymn.scss
@@ -4,7 +4,7 @@
     // box-shadow: 0 2px 4px rgba(34, 31, 28, 0.37);
     display: flex;
     flex-direction: column;
-    height: 100%;
+    min-height: 100%;
 
     & > * {
         margin-top: 0;
